--- a/src/App.css
+++ b/src/App.css
@@ -7,13 +7,13 @@
 
 @media only screen and (min-width: 768px) {
   img {
-    max-width: 100%;
+    max-width: 600px;
   }
 }
 
 @media only screen and (min-width: 1200px) {
   img {
-    max-width: 100%;
+    max-width: 600px;
   }
 }
 
